// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`+ 버튼 클릭시 1 증가한다. 1`] = `
"
      <button type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span class=\\"value\\">11</span>
      <button type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`- 버튼 클릭시 1 감소한다. 1`] = `
"
      <button type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span class=\\"value\\">9</span>
      <button type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`Max값인 경우 + 버튼이 disabled 상태가 되며 클릭해도 증가하지 않는다. 1`] = `
"
      <button type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span class=\\"value\\">12</span>
      <button type=\\"button\\" disabled=\\"\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`Min값인 경우 - 버튼이 disabled 상태가 되며, 클릭해도 감소하지 않는다. 1`] = `
"
      <button type=\\"button\\" disabled=\\"\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span class=\\"value\\">8</span>
      <button type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`생성시 버튼과 초기값을 렌더링한다. 1`] = `
"
      <button type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span class=\\"value\\">10</span>
      <button type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;
